@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2018-07-16
  * Added bytes filter to wing.vue.js.
+ * Added new object handler to wing.object_list in wing.vue.js.
 
 2018-07-14
  * Added wing.scroll_to() in wing.vue.js.
